# unitsnet-py

./: .gitignore  LICENSE  README.md  Units.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml
generator/: class_generator.py  export_template.jinja2  fetch_units_definitions.py  generate_export.py  generate_package.py  generate_readme.py  generate_units.py  unit_template.jinja2  utils.py
generator/templates/: __init__.py  readme_template.jinja2
scripts/: definition-version.py  next-package-version.py
tests/: test_unit_arithmetics.py  test_unit_comparing.py  test_unit_conversion.py  test_unit_creation.py  test_unit_dto.py  test_unit_formatting.py
units/: acceleration.g.py  amount_of_substance.g.py  amplitude_ratio.g.py  amplitude_ratio.py  angle.g.py  angle.py  apparent_energy.g.py  apparent_energy.py  apparent_power.g.py  area.g.py  area_density.g.py  area_density.py  area_moment_of_inertia.g.py  bit_rate.g.py  bit_rate.py  brake_specific_fuel_consumption.g.py  capacitance.g.py  coefficient_of_thermal_expansion.g.py  compressibility.g.py  density.g.py  duration.g.py  dynamic_viscosity.g.py  dynamic_viscosity.py  electric_admittance.g.py  electric_admittance.py  electric_charge.g.py  electric_charge.py  electric_charge_density.g.py  electric_conductance.g.py  electric_conductance.py  electric_conductivity.g.py  electric_conductivity.py  electric_current.g.py  electric_current_density.g.py  electric_current_gradient.g.py  electric_field.g.py  electric_inductance.g.py  electric_inductance.py  electric_potential.g.py  electric_potential.py  (+124 more)
units_generator/: generate_package.py
units_generator/common/: fetch_units_definitions.py  utils.py
units_generator/generators/: generate_docs.py  (+3 more)
unitsnet-py/: __init__.py  main.py
unitsnet_py/: __init__.py  abstract_unit.py
(+206 files in other folders)
