[tool.poetry]
name = "unitsnet-py"
version = "0.1.0"
description = "A better way to hold unit variables and easily convert to the destination unit"
authors = ["Haim Kastner <haim.kastner@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "unitsnet-py" },
]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

