[tool.poetry]
name = "unitsnet_py"
version = "0.1.35"
description = "A better way to hold unit variables and easily convert to the destination unit"
repository = "https://github.com/haimkastner/unitsnet-py"
authors = ["Haim Kastner <haim.kastner@gmail.com>"]
maintainers = [
    "Haim Kastner <haim.kastner@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [
    { include = "unitsnet_py" },
]
keywords = ["conversion", "units-of-measure", "units", "quantities", "unit-converter", "converter", "unit", "measure", "measures", "measurement", "measurements"]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

